fix issue causing component to spill outside borders

--- a/src/components/Projects/ProjectCard/ProjectCard.module.scss
+++ b/src/components/Projects/ProjectCard/ProjectCard.module.scss
@@ -134,6 +134,7 @@
 
 .tagContainer {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
